--- a/YellowstonePathology/UI/Surgical/ProspectiveReviewResultPage.xaml
+++ b/YellowstonePathology/UI/Surgical/ProspectiveReviewResultPage.xaml
@@ -95,6 +95,7 @@
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="*"></RowDefinition>					
 				</Grid.RowDefinitions>
 
@@ -116,31 +117,31 @@
 					<Hyperlink Click="HyperLinkAddDrEmerick_Click">Dr. Emerick</Hyperlink>
                 </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="5" Margin="5,3,0,0">                    
+                <TextBlock Grid.Column="0" Grid.Row="5" Margin="5,3,0,0">
+					<Hyperlink Click="HyperLinkAddDrLuem_Click">Dr. Luem</Hyperlink>
+                </TextBlock>
+
+                <TextBlock Grid.Column="0" Grid.Row="6" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkAddDrNero_Click">Dr. Nero</Hyperlink>
 				</TextBlock>
 
-				<TextBlock Grid.Column="0" Grid.Row="6" Margin="5,3,0,0">                    
+				<TextBlock Grid.Column="0" Grid.Row="7" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkAddDrSchultz_Click">Dr. Schultz</Hyperlink>
 				</TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="7" Margin="5,3,0,0">                    
+                <TextBlock Grid.Column="0" Grid.Row="8" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkAddDrClegg_Click">Dr. Clegg</Hyperlink>
                 </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="8" Margin="5,3,0,0">                    
+                <TextBlock Grid.Column="0" Grid.Row="9" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkAddDrMatthews_Click">Dr. Matthews</Hyperlink>
                 </TextBlock>
-
-                <TextBlock Grid.Column="0" Grid.Row="9" Margin="5,3,0,0">                    
-                    <Hyperlink Click="HyperLinkAddDrMorrison_Click">Dr. Morrison</Hyperlink>
-                </TextBlock>
-
+                
                 <TextBlock Grid.Column="0" Grid.Row="10" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkAddDrSmirnow_Click">Dr. Smirnow</Hyperlink>
                 </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="11" Margin="5,3,0,0" VerticalAlignment="Bottom">                    
+                <TextBlock Grid.Column="0" Grid.Row="12" Margin="5,3,0,0" VerticalAlignment="Bottom">                    
                     <Hyperlink Click="HyperLinkShowDocument_Click">Show Document</Hyperlink>
                 </TextBlock>
 
