--- a/YellowstonePathology/UI/ChainExplorer.xaml
+++ b/YellowstonePathology/UI/ChainExplorer.xaml
@@ -7,6 +7,22 @@
         mc:Ignorable="d"
         Title="Chain Browser" Height="600" Width="600">
     <Grid>
+        
+        <ListView Name="ListViewContracts" Margin="3" Grid.Row="1" ItemsSource="{Binding Path=ReportSearchList}">
+            <ListView.View>
+                <GridView AllowsColumnReorder="True" ColumnHeaderToolTip="Case List">
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=ReportNo}" Header="Report No" Width="85"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=AccessionDate, Converter={StaticResource MilitaryDateTimeConverter}}" Header="Accession Date" Width="110"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=PatientName}" Header="Patient Name" Width="150"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=PBirthdate, Converter={StaticResource ShortDateConverter}}" Header="Birthdate" Width="90"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=OrderedBy}" Header="Ordered By" Width="100"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=PanelSetName}" Header="Report" Width="170"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=FinalDate, Converter={StaticResource ShortDateConverter}}" Header="Final" Width="150"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=IsPosted}" Header="Billed" Width="100"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=ClientName}" Header="Client" Width="200"/>
+                </GridView>
+            </ListView.View>
+        </ListView>
         <Button Click="Button_Go" Height="30" Width="100">Go</Button>
     </Grid>
 </Window>
