--- a/YellowstonePathology/UI/Billing/EODProcessingDialog.xaml
+++ b/YellowstonePathology/UI/Billing/EODProcessingDialog.xaml
@@ -54,7 +54,7 @@
             </ListView.View>
         </ListView>
 
-        <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" Text="{Binding Path=CurrentProcess}" HorizontalAlignment="Left"></TextBlock>
+        <Button Grid.Column="0" Grid.Row="3" Height="30" Width="100" Margin="2,2,2,2" HorizontalAlignment="Left" VerticalAlignment="Bottom" Click="ButtonStart_Click">Start</Button>
         <Button Grid.Column="0" Grid.Row="3" Height="30" Width="100" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Click="ButtonClose_Click">Close</Button>
         
     </Grid>
