--- a/YellowstonePathology/UI/Test/EgfrToAlkReflexPage.xaml
+++ b/YellowstonePathology/UI/Test/EgfrToAlkReflexPage.xaml
@@ -125,7 +125,7 @@
                 <TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" TextWrapping="Wrap" AcceptsReturn="True" Text="{Binding Path=EGFRToALKReflexAnalysisTestOrder.EGFRMutationAnalysisResult}" HorizontalAlignment="Stretch" />
 
                 <TextBlock Grid.Column="0" Grid.Row="2" FontWeight="Bold" Margin="2,2,2,2">EGFR Comment:</TextBlock>
-                <TextBox Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=EGFRToALKReflexAnalysisTestOrder.EGFRMutationAnalysisComment}" TextWrapping="Wrap" AcceptsReturn="True" />
+                <TextBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" Text="{Binding Path=EGFRToALKReflexAnalysisTestOrder.EGFRMutationAnalysisComment}" TextWrapping="Wrap" AcceptsReturn="True" />
 
                 <TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">ALK Result:</TextBlock>
                 <TextBox Grid.Column="1" Grid.Row="4" Margin="2,2,2,2" TextWrapping="Wrap" AcceptsReturn="True" Text="{Binding Path=EGFRToALKReflexAnalysisTestOrder.ALKForNSCLCByFISHResult}" HorizontalAlignment="Stretch" />
