--- a/YellowstonePathology/UI/Test/MPNExtendedReflexPage.xaml
+++ b/YellowstonePathology/UI/Test/MPNExtendedReflexPage.xaml
@@ -102,13 +102,13 @@
 				<TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=OrderedOnDescription}"></TextBlock>
 
                 <TextBlock Grid.Column="0" Grid.Row="1" FontWeight="Bold" Margin="2,2,2,2">JAK2 V617F Result:</TextBlock>
-                <TextBlock Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.JAK2V617FResult}" TextWrapping="Wrap" />				
+                <TextBox Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.JAK2V617FResult}" TextWrapping="Wrap" />				
 
                 <TextBlock Grid.Column="0" Grid.Row="2" FontWeight="Bold" Margin="2,2,2,2">CALR Result:</TextBlock>
-                <TextBlock Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.CalreticulinMutationAnalysisResult}" TextWrapping="Wrap" />
+                <TextBox Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.CalreticulinMutationAnalysisResult}" TextWrapping="Wrap" />
 
                 <TextBlock Grid.Column="0" Grid.Row="3" FontWeight="Bold" Margin="2,2,2,2">MPL Result:</TextBlock>
-                <TextBlock Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.MPLResult}" TextWrapping="Wrap" />
+                <TextBox Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.MPLResult}" TextWrapping="Wrap" />
 
                 <TextBlock Grid.Column="0" Grid.Row="4" FontWeight="Bold" Margin="2,2,2,2">Comment:</TextBlock>
                 <TextBox Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Comment}" />
