--- a/YellowstonePathology/UI/Test/HER2AmplificationByISHResultPage.xaml
+++ b/YellowstonePathology/UI/Test/HER2AmplificationByISHResultPage.xaml
@@ -47,7 +47,7 @@
                 <TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Order</TextBlock>
 
                 <TextBlock Grid.Column="0" Grid.Row="1" Margin="5,3,0,0">                    
-                    <Hyperlink Click="HyperLinkOrderSummary_Click">HER2 Summary</Hyperlink>
+                    <Hyperlink Click="HyperLinkOrderSummary_Click">IHC</Hyperlink>
                 </TextBlock>
 
                 <TextBlock Grid.Column="0" Grid.Row="3" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Options</TextBlock>
