--- a/YellowstonePathology/UI/Test/MPNExtendedReflexPage.xaml
+++ b/YellowstonePathology/UI/Test/MPNExtendedReflexPage.xaml
@@ -102,25 +102,25 @@
 				<TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=OrderedOnDescription}"></TextBlock>
 
                 <TextBlock Grid.Column="0" Grid.Row="1" FontWeight="Bold" Margin="2,2,2,2">JAK2 V617F Result:</TextBlock>
-                <TextBox Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.JAK2V617FResult}" TextWrapping="Wrap" />				
+                <TextBox Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.JAK2V617FResult}" TextWrapping="Wrap" AcceptsReturn="True" />				
 
                 <TextBlock Grid.Column="0" Grid.Row="2" FontWeight="Bold" Margin="2,2,2,2">CALR Result:</TextBlock>
-                <TextBox Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.CalreticulinMutationAnalysisResult}" TextWrapping="Wrap" />
+                <TextBox Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.CalreticulinMutationAnalysisResult}" TextWrapping="Wrap" AcceptsReturn="True" />
 
                 <TextBlock Grid.Column="0" Grid.Row="3" FontWeight="Bold" Margin="2,2,2,2">MPL Result:</TextBlock>
-                <TextBox Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.MPLResult}" TextWrapping="Wrap" />
+                <TextBox Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.MPLResult}" TextWrapping="Wrap" AcceptsReturn="True" />
 
                 <TextBlock Grid.Column="0" Grid.Row="4" FontWeight="Bold" Margin="2,2,2,2">Comment:</TextBlock>
-                <TextBox Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Comment}" />
+                <TextBox Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Comment}" TextWrapping="Wrap" AcceptsReturn="True" />
                 
                 <TextBlock Grid.Column="0" Grid.Row="6" FontWeight="Bold" Margin="2,2,2,2">Interpretation:</TextBlock>
-				<TextBox Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Interpretation}" TextWrapping="Wrap" />
+                <TextBox Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Interpretation}" TextWrapping="Wrap" AcceptsReturn="True" />
 
 				<TextBlock Grid.Column="0" Grid.Row="8" FontWeight="Bold" Margin="2,2,2,2">Method:</TextBlock>
-				<TextBox Grid.Column="0" Grid.Row="9" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Method}" TextWrapping="Wrap" />
+                <TextBox Grid.Column="0" Grid.Row="9" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Method}" TextWrapping="Wrap" AcceptsReturn="True" />
 
 				<TextBlock Grid.Column="0" Grid.Row="10" FontWeight="Bold" Margin="2,2,2,2">References:</TextBlock>
-				<TextBox Grid.Column="0" Grid.Row="11" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.ReportReferences}" TextWrapping="Wrap" />
+                <TextBox Grid.Column="0" Grid.Row="11" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.ReportReferences}" TextWrapping="Wrap" AcceptsReturn="True" />
 
 				<TextBlock Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="12" FontWeight="Bold" Margin="2,2,2,2">Current Orders</TextBlock>
 				<ListView Name="ListBoxPanelSetOrders" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="13" Margin="2,2,2,2" HorizontalAlignment="Stretch"
