--- a/YellowstonePathology/UI/Test/MPNStandardReflexPage.xaml
+++ b/YellowstonePathology/UI/Test/MPNStandardReflexPage.xaml
@@ -115,13 +115,13 @@
                 <TextBox Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrderMPNStandardReflex.Comment}" />
             
                 <TextBlock Grid.Column="0" Grid.Row="4" FontWeight="Bold" Margin="2,2,2,2">Interpretation:</TextBlock>
-                <TextBox Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrderMPNStandardReflex.Interpretation}" TextWrapping="Wrap" />
+                <TextBox Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrderMPNStandardReflex.Interpretation}" TextWrapping="Wrap" AcceptsReturn="True" />
 
 		        <TextBlock Grid.Column="0" Grid.Row="6" FontWeight="Bold" Margin="2,2,2,2">Method:</TextBlock>
-                <TextBox Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrderMPNStandardReflex.Method}" TextWrapping="Wrap" />
+                <TextBox Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrderMPNStandardReflex.Method}" TextWrapping="Wrap" AcceptsReturn="True" />
 
 		        <TextBlock Grid.Column="0" Grid.Row="8" FontWeight="Bold" Margin="2,2,2,2">References:</TextBlock>
-                <TextBox Grid.Column="0" Grid.Row="9" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrderMPNStandardReflex.ReportReferences}" TextWrapping="Wrap" />
+                <TextBox Grid.Column="0" Grid.Row="9" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrderMPNStandardReflex.ReportReferences}" TextWrapping="Wrap" AcceptsReturn="True" />
 
 		        <TextBlock Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="10" FontWeight="Bold" Margin="2,2,2,2">Current Orders</TextBlock>
 		        <ListView Name="ListBoxPanelSetOrders" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="11" Margin="2,2,2,2" HorizontalAlignment="Stretch"
