--- a/YellowstonePathology/UI/Test/HER2AmplificationSummaryResultPage.xaml
+++ b/YellowstonePathology/UI/Test/HER2AmplificationSummaryResultPage.xaml
@@ -132,8 +132,32 @@
                     <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,5" FontWeight="Bold" VerticalAlignment="Center">Ordered On:</TextBlock>
                     <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,5" Text="{Binding Path=OrderedOnDescription}"></TextBlock>
 
-                    <TextBlock Grid.Column="0" Grid.Row="21" Margin="2" FontWeight="Bold" VerticalAlignment="Center">Interpretation:</TextBlock>
-                    <TextBox Grid.Column="0" Grid.Row="22" Grid.ColumnSpan="2" AcceptsReturn="True" TextWrapping="Wrap" Margin="2" Text="{Binding Path=PanelSetOrder.Interpretation}" />
+                    <TextBlock Grid.Column="0" Grid.Row="1" Margin="2" FontWeight="Bold" VerticalAlignment="Center">Result:</TextBlock>
+                    <TextBox Grid.Column="1" Grid.Row="1" Margin="2" Text="{Binding Path=PanelSetOrder.Result}" VerticalAlignment="Center" />
+
+                    <TextBlock Grid.Column="0" Grid.Row="2" Margin="2" VerticalAlignment="Center" FontWeight="Bold">HER2/CEP17 Ratio:</TextBlock>
+                    <TextBox Grid.Column="1" Grid.Row="2" Margin="2" VerticalAlignment="Center" Text="{Binding Path=PanelSetOrder.HER2CEP17Ratio}" />
+
+                    <TextBlock Grid.Column="0" Grid.Row="3" Margin="2" VerticalAlignment="Center" FontWeight="Bold">Average HER2 Copy No:</TextBlock>
+                    <TextBox Grid.Column="1" Grid.Row="3"  Margin="2" Text="{Binding Path=PanelSetOrder.AverageHER2CopyNo}" />
+
+                    <TextBlock Grid.Column="0" Grid.Row="4" Margin="2" VerticalAlignment="Center" FontWeight="Bold">HER2 IHC Score:</TextBlock>
+                    <TextBox Grid.Column="1" Grid.Row="4"  Margin="2" Text="{Binding Path=PanelSetOrder.HER2ByIHCScore}" />
+
+                    <TextBlock Grid.Column="0" Grid.Row="5" Margin="2" VerticalAlignment="Center" FontWeight="Bold">HER2 IHC Required:</TextBlock>
+                    <CheckBox Grid.Column="1" Grid.Row="5" Margin="2" VerticalAlignment="Center" IsChecked="{Binding Path=PanelSetOrder.HER2ByIHCRequired}" />
+
+                    <TextBlock Grid.Column="0" Grid.Row="6" Margin="2" VerticalAlignment="Center" FontWeight="Bold">HER2 IHC Ordered:</TextBlock>
+                    <CheckBox Grid.Column="1" Grid.Row="6" Margin="2" VerticalAlignment="Center" IsChecked="{Binding Path=PanelSetOrder.HER2ByIHCOrdered}" />
+
+                    <TextBlock Grid.Column="0" Grid.Row="7" Margin="2" VerticalAlignment="Center" FontWeight="Bold">HER2 IHC Accepted:</TextBlock>
+                    <CheckBox Grid.Column="1" Grid.Row="7" Margin="2" VerticalAlignment="Center" IsChecked="{Binding Path=PanelSetOrder.HER2ByIHCAccepted}" />
+
+                    <TextBlock Grid.Column="0" Grid.Row="8" Margin="2" VerticalAlignment="Center" FontWeight="Bold">Requires Blinded Observer:</TextBlock>
+                    <CheckBox Grid.Column="1" Grid.Row="8" Margin="2" VerticalAlignment="Center" IsChecked="{Binding Path=PanelSetOrder.RequiresBlindedObserver}" />
+
+                    <TextBlock Grid.Column="0" Grid.Row="9" Margin="2" FontWeight="Bold" VerticalAlignment="Center">Interpretation:</TextBlock>
+                    <TextBox Grid.Column="0" Grid.Row="10" Grid.ColumnSpan="2" AcceptsReturn="True" TextWrapping="Wrap" Margin="2" Text="{Binding Path=PanelSetOrder.Interpretation}" />
 
 
                     <TextBlock Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="27" FontWeight="Bold" Margin="2,2,2,2">Current Orders</TextBlock>
