--- a/YellowstonePathology/UI/Test/HER2AmplificationByISHResultPage.xaml
+++ b/YellowstonePathology/UI/Test/HER2AmplificationByISHResultPage.xaml
@@ -48,11 +48,11 @@
                 <TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Order</TextBlock>
 
                 <TextBlock Grid.Column="0" Grid.Row="1" Margin="5,3,0,0">                    
-                    <Hyperlink Click="HyperLinkOrderHER2IHC_Click">IHC</Hyperlink>
+                    <Hyperlink Click="HyperLinkOrderHER2IHC_Click">HER2 By IHC</Hyperlink>
                 </TextBlock>
 
                 <TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,0">                    
-                    <Hyperlink Click="HyperLinkOrderHER2Summary_Click">Summary</Hyperlink>
+                    <Hyperlink Click="HyperLinkOrderHER2Summary_Click">HER2 Summary</Hyperlink>
                 </TextBlock>
 
                 <TextBlock Grid.Column="0" Grid.Row="4" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Options</TextBlock>
