--- a/YellowstonePathology/UI/Test/HER2AmplificationSummaryResultPage.xaml
+++ b/YellowstonePathology/UI/Test/HER2AmplificationSummaryResultPage.xaml
@@ -45,11 +45,11 @@
                 <TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Order</TextBlock>
 
                 <TextBlock Grid.Column="0" Grid.Row="1" Margin="5,3,0,0">                    
-                    <Hyperlink Click="HyperLinkOrderIHC_Click">IHC</Hyperlink>
+                    <Hyperlink Click="HyperLinkOrderIHC_Click">HER2 IHC</Hyperlink>
                 </TextBlock>
 
                 <TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,0">                    
-                    <Hyperlink Click="HyperLinkOrderDISH_Click">D-ISH</Hyperlink>
+                    <Hyperlink Click="HyperLinkOrderRecount_Click">HER2 Recount</Hyperlink>
                 </TextBlock>
 
                 <TextBlock Grid.Column="0" Grid.Row="3" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Options</TextBlock>
@@ -133,31 +133,31 @@
                     <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,5" Text="{Binding Path=OrderedOnDescription}"></TextBlock>
 
                     <TextBlock Grid.Column="0" Grid.Row="1" Margin="2" FontWeight="Bold" VerticalAlignment="Center">Result:</TextBlock>
-                    <TextBox Grid.Column="1" Grid.Row="1" Margin="2" Text="{Binding Path=PanelSetOrder.Result}" VerticalAlignment="Center" />
+                    <TextBox Grid.Column="1" Grid.Row="1" Margin="2" Text="{Binding Path=HER2AmplificationResult.Result}" VerticalAlignment="Center" />
 
                     <TextBlock Grid.Column="0" Grid.Row="2" Margin="2" VerticalAlignment="Center" FontWeight="Bold">HER2/CEP17 Ratio:</TextBlock>
-                    <TextBox Grid.Column="1" Grid.Row="2" Margin="2" VerticalAlignment="Center" Text="{Binding Path=PanelSetOrder.HER2CEP17Ratio}" />
+                    <TextBox Grid.Column="1" Grid.Row="2" Margin="2" VerticalAlignment="Center" Text="{Binding Path=HER2AmplificationResult.HER2CEP17Ratio}" />
 
                     <TextBlock Grid.Column="0" Grid.Row="3" Margin="2" VerticalAlignment="Center" FontWeight="Bold">Average HER2 Copy No:</TextBlock>
-                    <TextBox Grid.Column="1" Grid.Row="3"  Margin="2" Text="{Binding Path=PanelSetOrder.AverageHER2CopyNo}" />
+                    <TextBox Grid.Column="1" Grid.Row="3"  Margin="2" Text="{Binding Path=HER2AmplificationResult.AverageHER2CopyNo}" />
 
                     <TextBlock Grid.Column="0" Grid.Row="4" Margin="2" VerticalAlignment="Center" FontWeight="Bold">HER2 IHC Score:</TextBlock>
-                    <TextBox Grid.Column="1" Grid.Row="4"  Margin="2" Text="{Binding Path=PanelSetOrder.HER2ByIHCScore}" />
+                    <TextBox Grid.Column="1" Grid.Row="4"  Margin="2" Text="{Binding Path=HER2AmplificationResult.HER2ByIHCScore}" />
 
                     <TextBlock Grid.Column="0" Grid.Row="5" Margin="2" VerticalAlignment="Center" FontWeight="Bold">HER2 IHC Required:</TextBlock>
-                    <CheckBox Grid.Column="1" Grid.Row="5" Margin="2" VerticalAlignment="Center" IsChecked="{Binding Path=PanelSetOrder.HER2ByIHCRequired}" />
+                    <CheckBox Grid.Column="1" Grid.Row="5" Margin="2" VerticalAlignment="Center" IsChecked="{Binding Path=HER2AmplificationResult.HER2ByIHCRequired}" />
 
                     <TextBlock Grid.Column="0" Grid.Row="6" Margin="2" VerticalAlignment="Center" FontWeight="Bold">HER2 IHC Ordered:</TextBlock>
-                    <CheckBox Grid.Column="1" Grid.Row="6" Margin="2" VerticalAlignment="Center" IsChecked="{Binding Path=PanelSetOrder.HER2ByIHCOrdered}" />
+                    <CheckBox Grid.Column="1" Grid.Row="6" Margin="2" VerticalAlignment="Center" IsChecked="{Binding Path=HER2AmplificationResult.HER2ByIHCIsOrdered}" />
 
                     <TextBlock Grid.Column="0" Grid.Row="7" Margin="2" VerticalAlignment="Center" FontWeight="Bold">HER2 IHC Accepted:</TextBlock>
-                    <CheckBox Grid.Column="1" Grid.Row="7" Margin="2" VerticalAlignment="Center" IsChecked="{Binding Path=PanelSetOrder.HER2ByIHCAccepted}" />
+                    <CheckBox Grid.Column="1" Grid.Row="7" Margin="2" VerticalAlignment="Center" IsChecked="{Binding Path=HER2AmplificationResult.HER2ByIHCIsAccepted}" />
 
                     <TextBlock Grid.Column="0" Grid.Row="8" Margin="2" VerticalAlignment="Center" FontWeight="Bold">Requires Blinded Observer:</TextBlock>
-                    <CheckBox Grid.Column="1" Grid.Row="8" Margin="2" VerticalAlignment="Center" IsChecked="{Binding Path=PanelSetOrder.RequiresBlindedObserver}" />
+                    <CheckBox Grid.Column="1" Grid.Row="8" Margin="2" VerticalAlignment="Center" IsChecked="{Binding Path=HER2AmplificationResult.RequiresBlindedObserver}" />
 
                     <TextBlock Grid.Column="0" Grid.Row="9" Margin="2" FontWeight="Bold" VerticalAlignment="Center">Interpretation:</TextBlock>
-                    <TextBox Grid.Column="0" Grid.Row="10" Grid.ColumnSpan="2" AcceptsReturn="True" TextWrapping="Wrap" Margin="2" Text="{Binding Path=PanelSetOrder.Interpretation}" />
+                    <TextBox Grid.Column="0" Grid.Row="10" Grid.ColumnSpan="2" AcceptsReturn="True" TextWrapping="Wrap" Margin="2" Text="{Binding Path=HER2AmplificationResult.Interpretation}" />
 
 
                     <TextBlock Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="27" FontWeight="Bold" Margin="2,2,2,2">Current Orders</TextBlock>
