--- a/YellowstonePathology/UI/Test/HER2AmplificationByISHResultPage.xaml
+++ b/YellowstonePathology/UI/Test/HER2AmplificationByISHResultPage.xaml
@@ -51,10 +51,6 @@
                     <Hyperlink Click="HyperLinkOrderHER2IHC_Click">HER2 By IHC</Hyperlink>
                 </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,0">                    
-                    <Hyperlink Click="HyperLinkOrderHER2Summary_Click">HER2 Summary</Hyperlink>
-                </TextBlock>
-
                 <TextBlock Grid.Column="0" Grid.Row="4" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Options</TextBlock>
 
 				<TextBlock Grid.Column="0" Grid.Row="5" Margin="5,3,0,0">                    
@@ -239,13 +235,27 @@
                     <TextBlock Grid.Column="0" Grid.Row="28" FontWeight="Bold" Margin="2" VerticalAlignment="Center">Fixation Comment:</TextBlock>
                     <TextBox Grid.Column="0" Grid.Row="29" Grid.ColumnSpan="2" TextWrapping="Wrap" Margin="2" AcceptsReturn="True" VerticalAlignment="Center" Text="{Binding Path=SpecimenOrder.FixationComment}" />
 
-                    <TextBlock Grid.Column="0" Grid.Row="30" Margin="2,2,2,2" FontWeight="Bold">Distribute:</TextBlock>
-					<CheckBox Grid.Column="1" Grid.Row="30" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.Distribute}"></CheckBox>
+                    <TextBlock Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="30" FontWeight="Bold" Margin="2,2,2,2">Current Orders</TextBlock>
+                    <ListView Name="ListBoxPanelSetOrders" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="31" Margin="2,2,2,2" HorizontalAlignment="Stretch"
+                      ItemsSource="{Binding Path=AccessionOrder.PanelSetOrderCollection}">
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn DisplayMemberBinding="{Binding Path=ReportNo}" Header="Report No" Width="100"/>
+                                <GridViewColumn DisplayMemberBinding="{Binding Path=OrderTime}" Header="Date" Width="150"/>
+                                <GridViewColumn DisplayMemberBinding="{Binding Path=PanelSetName}" Header="Order" Width="200"/>
+                                <GridViewColumn DisplayMemberBinding="{Binding Path=FinalTime}" Header="Final" Width="150"/>
+                                <GridViewColumn DisplayMemberBinding="{Binding Path=Distribute}" Header="Distribute" Width="150"/>
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
 
-                    <TextBlock Grid.Column="0" Grid.Row="31" Margin="2,2,2,2" FontWeight="Bold">No Charge:</TextBlock>
-                    <CheckBox Grid.Column="1" Grid.Row="31" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.NoCharge}"></CheckBox>
+                    <TextBlock Grid.Column="0" Grid.Row="32" Margin="2,2,2,2" FontWeight="Bold">Distribute:</TextBlock>
+					<CheckBox Grid.Column="1" Grid.Row="32" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.Distribute}"></CheckBox>
 
-                    <Grid Grid.Column="0" Grid.Row="32" Grid.ColumnSpan="2">
+                    <TextBlock Grid.Column="0" Grid.Row="33" Margin="2,2,2,2" FontWeight="Bold">No Charge:</TextBlock>
+                    <CheckBox Grid.Column="1" Grid.Row="33" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.NoCharge}"></CheckBox>
+
+                    <Grid Grid.Column="0" Grid.Row="34" Grid.ColumnSpan="2">
 						<Grid.ColumnDefinitions>
 							<ColumnDefinition Width="Auto"></ColumnDefinition>
 							<ColumnDefinition Width="*"></ColumnDefinition>
